-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.5.7, 6.8.1
-
-
baaa6f217 (dev), 96fe524ba (6.10), 90ae749db (6.9), aa59073c9 (tqtc/lts-6.8), 13860157d (dev), afef7ff31 (6.10), 038ccd24f (dev), a9eb14553 (6.10)
Steps to reproduce the issue:
- Build and run the attached example project.
- Click on the second button, and you will notice strange characters appearing.
| For Gerrit Dashboard: QTBUG-132108 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 651970,6 | Make sure we propely dereference all glyphs in distance field cache | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 651987,7 | Don't reuse invalidated distance field cache | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 656188,2 | Make sure we propely dereference all glyphs in distance field cache | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 656883,4 | Avoid returning invalidated fonts from freetype cache | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 658700,2 | Make sure we propely dereference all glyphs in distance field cache | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 664087,2 | Make sure we propely dereference all glyphs in distance field cache | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 666230,2 | Don't reuse invalidated distance field cache | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 668713,2 | Avoid returning invalidated fonts from freetype cache | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |