tests/auto/quick/scenegraph/data/distanceFieldCacheInvalidation.qml
@@ -1,0 +1,10 @@
+// Copyright (C) 2025 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
+
+import QtQuick
+
+Rectangle {
+    width: 200
+    height: 200
+    color: "steelblue"
+}
